# Test

./: README.md
00.c_test/: CMakeLists.txt  test.cc
00.c_test/includes/: shape.h
00.c_test/lib/: CMakeLists.txt  shape.cc
01.eigen_test/: .test.cc.swp  CMakeLists.txt  build.sh  build_debug.sh  test.cc  test_nomalloc.cc  test_nomalloc.h
01.eigen_test/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  program
02.arma_test/: 1  CMakeLists.txt  build.sh  test.cc
03.mkl_test/: test.cc
cuda_study/01.hello_cuda/: CMakeLists.txt  build.sh  hello_cuda  hello_cuda.cu
cuda_study/02.gpu_adder/: .main.cu.swo  .main.cu.swp  CMakeLists.txt  build.sh  main.cu
cuda_study/03.gpu_thread/: .main.cu.swp  main.cu
cuda_study/04.device_info/: .main.cu.swp  helper_cuda.h  helper_string.h  main.cu
cuda_study/05.1.gemm_naive/: CMakeLists.txt  main.cu
cuda_study/05.2.gemm_occupancy_ctrl/: main.cu  report.csv  report.ncu-rep  run_ncu.sh
cuda_study/05.3.gemm_shared_mem/: build.sh  main.cu
cuda_study/05.4.gemm_shared_mem_bank/: main.cu  out.ncu-rep
cuda_study/05.5.gemm_shared_mem_coalesced/: CMakeLists.txt  main.cu  ncu_report_16.txt  ncu_report_32.txt  ncu_report_4.txt  ncu_report_8.txt
cuda_study/05.6.gemm_wmma/: CMakeLists.txt  main.cu
cuda_study/06.gemm_cutlass/: .basic_gemm.cu.swo  .basic_gemm.cu.swp  CMakeLists.txt  basic_gemm.cu  ncu_report.txt  report.txt  run_ncu.sh
cuda_study/07.conv2d_cutlss/: .ampere_tensorop_conv2dfprop.cu.swp  CMakeLists.txt  ampere_tensorop_conv2dfprop.cu  build.sh  report.txt  run.sh
cuda_study/08.convolution/00.cufft_1d_c2c/: main.cu
cuda_study/08.convolution/01.cufft_1d_r2c/: .main.cu.swo  main.cu  main.cu.save
cuda_study/08.convolution/02.cufft_1d_r2c_runtime/: main.cu  run.sh
cuda_study/08.convolution/02.cufft_1d_r2c_runtime_2/: main.cu
cuda_study/08.convolution/03.cufft_1d_conv/: main.cu  run.sh
cuda_study/08.convolution/04.cufft_2d_r2c/: main.cu  run.sh
cuda_study/08.convolution/05.cufft_2d_conv/: .main.cu.swp  1  main.cu  run.sh  run_debug.sh
cuda_study/08.convolution/05.cufft_2d_conv/build_debug/: Makefile  test
cuda_study/08.convolution/06.cufftDX_1d_c2c/: .main.cu.swp  CMakeLists.txt  main.cu
cuda_study/08.convolution/07.cufftDX_2d_conv/: .main.cu.swp  CMakeLists.txt  build_debug.sh  main.cu
cuda_study/08.convolution/07.cufftDX_2d_conv/build_debug/: CMakeCache.txt
cuda_study/08.convolution/08.event_ctrl/: 1  gpuTimer.h  main.cu  run.sh
cuda_study/08.convolution/08.event_ctrl/build_debug/: cmake_install.cmake
cuda_study/compute_ai/: DS_timer.cpp  build_debug.sh  gpu_mem_leak_check.sh  main.cu  nsys_profile.sh  report1.nsys-rep  report1.sqlite
cuda_study/compute_ai/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  program
cuda_study/compute_ai_batch/: CMakeLists.txt  build.sh  main.cu  nsys_profile.sh
cuda_study/compute_ai_batch/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  program
cuda_study/gemm_benchmark/: .main.cu.swn  .main.cu.swo  .main.cu.swp  CMakeLists.txt  build_debug.sh  gpuTimer.h  main.cu  test.sh
cuda_study/gemm_benchmark/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  test
flashlight_study/01.flashlight_basic/: CMakeLists.txt  main.cc
flashlight_study/02.view/: CMakeLists.txt  build.sh  main.cc  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep  report6.nsys-rep  report7.nsys-rep  report8.nsys-rep  report9.nsys-rep
flashlight_study/03.eval/: main.cc  report4.nsys-rep  run_nsight.sh
flashlight_study/03.eval_fused/: build_debug.sh  main.cc  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep
flashlight_study/03.eval_fused/build_debug/: CMakeCache.txt  Makefile
flashlight_study/03.eval_unfused/: main.cc  report1.nsys-rep  report2.nsys-rep  report4.nsys-rep
flashlight_study/03.eval_unfused/build_debug/: cmake_install.cmake
flashlight_study/04.cuda_graph/: .main.cc.swp  .run_nsight.sh.swp  CMakeLists.txt  build.sh  build_debug.sh  main.cc  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  results.csv  run.sh  run_nsight.sh  run_table.sh
flashlight_study/04.cuda_graph_not_working/: 1  ]  main.cc  report1.qdstrm  report10.nsys-rep  report11.nsys-rep  report12.nsys-rep  report13.nsys-rep  report14.nsys-rep  report15.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.qdstrm  report6.nsys-rep  report7.nsys-rep  report8.nsys-rep  report9.nsys-rep  run_debug.sh  run_nsight.sh
flashlight_study/04.cuda_graph_not_working/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
